--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:image" content="/images/wfavicon.png">
+    <!-- Favicon for Apple devices -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/src/assets/favicon.png">
+    <!-- Favicon for Android devices -->
+    <link rel="icon" type="image/png" sizes="192x192" href="/src/assets/favicon.png">
     <title>Melody</title>
   </head>
   <body class="h-full overflow-hidden">
